fixed spacing on Characters component

--- a/src/components/Characters/Characters.css
+++ b/src/components/Characters/Characters.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: wrap;
     flex-wrap: wrap;
+    justify-content: space-evenly;
     gap: 2rem
 }
 .char-container{
